--- a/ACM_General/home/templates/home/sponsors.html
+++ b/ACM_General/home/templates/home/sponsors.html
@@ -23,68 +23,53 @@
 
     <div class="content-wrapper">
       <ul class="cards">
-        <li class="cards__item">
-          <div class="card">
+        <li class="cards__card">
+            <a href="http://tradebot.com/" class="card__link">
             <div class="card__image contain"
                  style="background-image: url({% static "home/img/sponsors/tradebot_logo.png" %})"></div>
-            <div class="card__content">
-              <div class="card__title">Tradebot | Sponsor</div>
+              <h5 class="card__title">Tradebot | Sponsor</h5>
+              </a>
               <p class="card__text">Tradebot Systems, Inc. is one of the largest
                 high-frequency, computer trading firms in the US. Based in
                 Kansas City, Missouri, they regularly account for 5% of the
                 total trading volume in the US stock market.</p>
-              <a href="http://tradebot.com/"
-                 class="acm-btn card__btn">Learn More</a>
-            </div>
-          </div>
         </li>
-        <li class="cards__item">
-          <div class="card">
+        <li class="cards__card">
+          <a href="https://www.garmin.com/" class="card__link">
             <div class="card__image"
                  style="background-image: url({% static "home/img/sponsors/garmin-squarelogo.png" %})"></div>
-            <div class="card__content">
-              <div class="card__title">Garmin | Sponsor</div>
+              <h5 class="card__title">Garmin | Sponsor</h5>
+              </a>
               <p class="card__text">Garmin Ltd. (shortened to Garmin) is an
                 American multinational technology company known for its
                 specialization in GPS technology development for its use in
                 automotive, aviation, marine, outdoor, and sport activities and
                 utilities.</p>
-              <a href="https://www.garmin.com/"
-                 class="acm-btn btn btn--block card__btn">Learn More</a>
-            </div>
-          </div>
         </li>
-        <li class="cards__item">
-          <div class="card">
-            <div class="card__image contain"
+        <li class="cards__card">
+            <a href="https://www.att.com/" class="card__link">
+              <div class="card__image contain"
                  style="background-image: url({% static "home/img/sponsors/AT&T_2016.png" %})"></div>
-            <div class="card__content">
-              <div class="card__title">AT&T | Donor</div>
+              <h5 class="card__title">AT&T | Donor</h5>
+          </a>
               <p class="card__text">AT&T Inc. is an American multinational
                 telecommunications conglomerate. AT&T is the second largest
                 provider of mobile telephone services and the largest provider
                 of fixed telephone services in the United States, and also
                 provides broadband subscription television services through
                 DirecTV.</p>
-              <a href="https://www.att.com/"
-                 class="acm-btn btn btn--block card__btn">Learn More</a>
-            </div>
-          </div>
         </li>
-        <li class="cards__item">
-          <div class="card">
+        <li class="cards__card">
+            <a href="https://www.up.com/"
+                 class="card__link">
             <div class="card__image"
                  style="background-image: url({% static "home/img/sponsors/up_logo.gif" %})"></div>
-            <div class="card__content">
-              <div class="card__title">Union Pacific | Contributor</div>
+              <h5 class="card__title">Union Pacific | Contributor</h5>
+            </a>
               <p class="card__text">The Union Pacific Railroad is a freight
                 hauling railroad that operates 8,500 locomotives over 32,100
                 route-miles in 23 states west of Chicago, Illinois and New
                 Orleans, Louisiana.</p>
-              <a href="https://www.up.com/"
-                 class="acm-btn btn btn--block card__btn">Learn More</a>
-            </div>
-          </div>
         </li>
       </ul>
     </div>
