--- a/ACM_General/home/static/home/css/officers.css
+++ b/ACM_General/home/static/home/css/officers.css
@@ -10,55 +10,24 @@
   transform: scaleX(.8);
 }
 
-@media (max-width: 800px) {
-  .cards__item {
-    width: 100% !important;
-  }
-}
 
-.link_zone {
-  display: flex;
-  width: 100%;
-}
-
-.btn {
-  display: block;
-  flex-grow: 1;
-  flex-shrink: 1;
-  border-right: 2px #ddd solid;
-}
-.btn:last-of-type {
-  border: none;
-}
 
 .cards {
-  display: flex;
-  flex-wrap: wrap;
   list-style: none;
-  margin: 0;
   padding: 0;
+  margin: 0 auto;
+  max-width: 800px;
 }
 
-.cards__item {
-  margin: 1rem;
-  width: calc(50% - 2rem);
+
+.cards__card {
   list-style: none;
-}
-
-.card {
-  border: 1px solid #ddd;
   display: flex;
-  flex-direction: column;
-  height: 190px;
-  width: 100%;
+  height: 200px;
+  margin: 1rem auto 0 auto;
 }
-
-.card__content {
-  position: relative;
-  width: 100%;
-  display: flex;
-  padding: 10px;
-  flex-grow: 2;
+.cards__card:nth-of-type(even) {
+  flex-direction: row-reverse;
 }
 
 .card__image {
@@ -66,33 +35,28 @@
   background-repeat: no-repeat;
   background-size: cover;
   filter: contrast(70%);
-  width: 130px;
-  height: 130px;
+  display: block;
+  width: 180px;
+  height: 180px;
+  margin: 10px 0;
+  border-radius: 50%;
 }
-.card__title {
-  font-size: 1rem;
-  margin: 4px 0;
+
+.card__content {
+  height: 100%;
+  padding: 1rem;
+}
+
+.card__name {
+  margin: 0;
+}
+.card__titles {
+  margin: 0;
+  font-size: .96rem;
+  color: rgba(0,0,0,.8);
 }
 .card__text {
-  font-size: 0.875rem;
-  line-height: 1.5;
-  padding: 0  0 0 1rem;
-}
-
-.past_officers {
-  height: 46px;
-  background-color: rgba(233, 101, 76, .5);
-  margin: 0 1rem;
-  cursor: pointer;
-  transition: background-color .1s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  color: white;
-  font-size: 18px;
-}
-
-.past_officers:hover {
-  background-color: rgba(233, 101, 76, .8);
+  margin: 10px 0;
+  font-size: .86rem;
+  color: rgba(0,0,0,.77);
 }
