--- a/ACM_General/home/static/home/scss/calendar.scss
+++ b/ACM_General/home/static/home/scss/calendar.scss
@@ -1,25 +1,20 @@
-/* line 1, ../scss/calendar.scss */
 .nav-calendar a span {
   color: #4d4d4d !important;
 }
 
-/* line 5, ../scss/calendar.scss */
 .nav-calendar:hover a span {
   color: #4d4d4d !important;
 }
 
-/* line 9, ../scss/calendar.scss */
 .nav-calendar:after {
-  transform: scaleX(0.8);
+  transform: scaleX(.8);
 }
 
-/* line 13, ../scss/calendar.scss */
 main {
   background-color: white;
   padding-bottom: 20px;
 }
 
-/* line 18, ../scss/calendar.scss */
 iframe {
   width: 100%;
   height: 600px;
