--- a/ACM_General/home/static/home/scss/media.scss
+++ b/ACM_General/home/static/home/scss/media.scss
@@ -1,25 +1,20 @@
-/* line 1, ../scss/media.scss */
 .nav-media a span {
   color: #4d4d4d !important;
 }
 
-/* line 5, ../scss/media.scss */
 .nav-media:hover a span {
   color: #4d4d4d !important;
 }
 
-/* line 9, ../scss/media.scss */
 .nav-media:after {
-  transform: scaleX(0.8);
+  transform: scaleX(.8);
 }
 
-/* line 13, ../scss/media.scss */
 .m-p-g {
   max-width: 100%;
   margin: 0 auto;
 }
 
-/* line 18, ../scss/media.scss */
 .m-p-g__thumbs-img {
   padding: 4px;
   margin: 0;
@@ -37,28 +32,23 @@
   transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-/* line 35, ../scss/media.scss */
 .m-p-g__thumbs-img.active {
   z-index: 50;
 }
 
-/* line 39, ../scss/media.scss */
 .m-p-g__thumbs-img.layout-completed {
   opacity: 1;
 }
 
-/* line 43, ../scss/media.scss */
 .m-p-g__thumbs-img.hide {
   opacity: 0;
 }
 
-/* line 47, ../scss/media.scss */
 .m-p-g__thumbs-img:hover {
   -webkit-filter: brightness(107%);
   filter: brightness(107%);
 }
 
-/* line 52, ../scss/media.scss */
 .m-p-g__fullscreen {
   position: fixed;
   z-index: 10;
@@ -77,7 +67,6 @@
   backface-visibility: hidden;
 }
 
-/* line 70, ../scss/media.scss */
 .m-p-g__fullscreen.active {
   -webkit-transition: background .25s ease-out, visibility .01s 0s linear;
   transition: background .25s ease-out, visibility .01s 0s linear;
@@ -85,7 +74,6 @@
   background: rgba(0, 0, 0, 0.95);
 }
 
-/* line 77, ../scss/media.scss */
 .m-p-g__fullscreen-img {
   pointer-events: none;
   position: absolute;
@@ -101,7 +89,6 @@
   transition: opacity 0.5s ease-out;
 }
 
-/* line 92, ../scss/media.scss */
 .m-p-g__fullscreen-img.active {
   visibility: visible;
   opacity: 1 !important;
@@ -111,14 +98,12 @@
   transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1), opacity 0.5s ease-out, -webkit-transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-/* line 101, ../scss/media.scss */
 .m-p-g__fullscreen-img.almost-active {
   opacity: 0;
   -webkit-transform: translate3d(0, 0, 0) !important;
   transform: translate3d(0, 0, 0) !important;
 }
 
-/* line 107, ../scss/media.scss */
 .m-p-g__controls {
   position: fixed;
   top: 0;
@@ -134,13 +119,11 @@
   transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
-/* line 122, ../scss/media.scss */
 .m-p-g__controls.active {
   opacity: 1;
   visibility: visible;
 }
 
-/* line 127, ../scss/media.scss */
 .m-p-g__controls-close, .m-p-g__controls-arrow {
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -149,12 +132,10 @@
   background: none;
 }
 
-/* line 135, ../scss/media.scss */
 .m-p-g__controls-close:focus, .m-p-g__controls-arrow:focus {
   outline: none;
 }
 
-/* line 139, ../scss/media.scss */
 .m-p-g__controls-arrow {
   position: absolute;
   z-index: 1;
@@ -172,12 +153,10 @@
   opacity: 0;
 }
 
-/* line 156, ../scss/media.scss */
 .m-p-g__controls-arrow:hover {
   opacity: 1;
 }
 
-/* line 160, ../scss/media.scss */
 .m-p-g__controls-arrow--prev {
   left: 0;
   padding-left: 3vw;
@@ -186,7 +165,6 @@
   justify-content: flex-start;
 }
 
-/* line 168, ../scss/media.scss */
 .m-p-g__controls-arrow--next {
   right: 0;
   padding-right: 3vw;
@@ -195,7 +173,6 @@
   justify-content: flex-end;
 }
 
-/* line 176, ../scss/media.scss */
 .m-p-g__controls-close {
   position: absolute;
   top: 3vh;
@@ -205,7 +182,6 @@
   -webkit-tap-highlight-color: transparent;
 }
 
-/* line 185, ../scss/media.scss */
 .m-p-g__btn {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -224,12 +200,10 @@
   transition: all .25s ease-out;
 }
 
-/* line 203, ../scss/media.scss */
 .m-p-g__btn:hover {
   background: rgba(255, 255, 255, 0.15);
 }
 
-/* line 207, ../scss/media.scss */
 .m-p-g__alertBox {
   position: fixed;
   z-index: 999;
@@ -246,7 +220,6 @@
   color: grey;
 }
 
-/* line 223, ../scss/media.scss */
 .m-p-g__alertBox h2 {
   color: red;
 }
